Добавил форму добавления заказа, форму карточки заказа в списке и адаптеры для списков

--- a/app/src/main/res/layout/resources_list_item.xml
+++ b/app/src/main/res/layout/resources_list_item.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/spinner_item_style_light"
-    android:padding="10dp">
+    android:layout_height="48dp"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/resourceNameText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="marquee"
         android:textAlignment="viewStart"
         android:textColor="@color/navbar_text"
         android:textColorHighlight="@color/app_secondary"
@@ -20,16 +20,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/resourcePriceText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAlignment="viewStart"
-        android:textColor="@color/price"
-        android:textColorHighlight="@color/app_secondary"
-        android:textColorLink="@color/app_secondary"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
