--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="app_primary">#FFFFFF</color>
+    <color name="order_list_item">#ECECEC</color>
     <color name="app_secondary">#228CBC</color>
     <color name="navbar_text">#061D27</color>
+    <color name="hint">#6B228CBC</color>
     <color name="black">#000000</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="positive_stat">#00FF00</color>
     <color name="negative_stat">#FF0000</color>
     <color name="same_stat">#515151</color>
-    <color name="price">#FFC105</color>
+    <color name="fab">#FFC105</color>
 </resources>
