--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:id="@+id/createButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/fab"
         android:contentDescription="@string/create"
         android:src="@drawable/ic_add"
         app:layout_anchor="@id/bottomAppBar" />
