Добавил алгоритм добавления заказа в БД и скорректировал карточку заказа

--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -105,7 +105,7 @@
             android:layout_marginEnd="10dp"
             android:background="@drawable/input_style"
             android:hint="@string/end_date"
-            android:inputType="datetime"
+            android:inputType="text"
             android:padding="8dp"
             android:scrollbars="none"
             android:textAlignment="center"
