--- a/app/src/main/res/layout/customers_list_item.xml
+++ b/app/src/main/res/layout/customers_list_item.xml
@@ -1,23 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<TextView android:id="@+id/customerNameText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/spinner_item_style_dark"
-    android:padding="10dp">
-
-    <TextView
-        android:id="@+id/customerNameText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAlignment="viewStart"
-        android:textColor="@color/app_primary"
-        android:textColorHighlight="@color/app_secondary"
-        android:textColorLink="@color/app_secondary"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:textAlignment="viewStart"
+    android:textColor="@color/app_primary"
+    android:textColorHighlight="@color/app_secondary"
+    android:textColorLink="@color/app_secondary"
+    android:textSize="16sp"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
