--- a/app/src/main/res/layout/resources_list_item.xml
+++ b/app/src/main/res/layout/resources_list_item.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<TextView android:id="@+id/resourceNameText"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
-    android:padding="5dp">
-
-    <TextView
-        android:id="@+id/resourceNameText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="marquee"
-        android:textAlignment="viewStart"
-        android:textColor="@color/navbar_text"
-        android:textColorHighlight="@color/app_secondary"
-        android:textColorLink="@color/app_secondary"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="wrap_content"
+    android:background="@drawable/spinner_item_style_light"
+    android:ellipsize="marquee"
+    android:textAlignment="viewStart"
+    android:textColor="@color/navbar_text"
+    android:textColorHighlight="@color/app_secondary"
+    android:textColorLink="@color/app_secondary"
+    android:textSize="16sp"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
