--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -24,11 +24,10 @@
             app:srcCompat="@drawable/ic_back" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/createActivityHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="@string/create_header"
             android:textAlignment="center"
             android:textColor="@color/app_secondary"
             android:textColorHighlight="@color/navbar_text"
@@ -53,7 +52,7 @@
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView10" />
+            app:layout_constraintTop_toBottomOf="@+id/createActivityHeader" />
 
         <EditText
             android:id="@+id/nameField"
@@ -163,7 +162,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/input_style"
             android:hint="@string/size_hint"
-            android:inputType="numberSigned"
+            android:inputType="number"
             android:padding="8dp"
             android:scrollbars="none"
             android:textAlignment="viewStart"
@@ -308,7 +307,6 @@
             android:layout_marginBottom="128dp"
             android:background="@drawable/button_style"
             android:padding="10dp"
-            android:text="@string/create"
             android:textAlignment="center"
             android:textColor="@color/app_primary"
             android:textColorHighlight="@color/navbar_text"
