--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -162,7 +162,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/input_style"
             android:hint="@string/size_hint"
-            android:inputType="number"
+            android:inputType="text"
             android:padding="8dp"
             android:scrollbars="none"
             android:textAlignment="viewStart"
