--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -219,6 +219,22 @@
             app:layout_constraintTop_toBottomOf="@+id/resourcesList" />
 
         <TextView
+            android:id="@+id/errorInputText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/empty_fields"
+            android:textAlignment="center"
+            android:textColor="@color/negative_stat"
+            android:textColorHighlight="@color/navbar_text"
+            android:textColorLink="@color/navbar_text"
+            android:textSize="16sp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addOrderButton" />
+
+        <TextView
             android:id="@+id/TextVIew9"
             android:layout_width="0dp"
             android:layout_height="0dp"
