--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,20 @@
 
     <style name="CustomDateTimePickerTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/app_secondary</item>
+        <item name="android:buttonBarPositiveButtonStyle">@style/DatePickerTheme.ButtonBarPositiveButtonStyle</item>
+        <item name="android:buttonBarNegativeButtonStyle">@style/DatePickerTheme.ButtonBarNegativeButtonStyle</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="DatePickerTheme.ButtonBarNegativeButtonStyle"
+        parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/app_secondary</item>
+    </style>
+
+    <style name="DatePickerTheme.ButtonBarPositiveButtonStyle"
+        parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/app_secondary</item>
     </style>
 
 </resources>
